Полностью реализован микросервис deal
