# deal/src/main/java/ru/neoflex/deal/model/Application.java
@@ -1,0 +1,59 @@
+package ru.neoflex.deal.model;
+
+import com.vladmihalcea.hibernate.type.json.JsonBinaryType;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.Type;
+import org.hibernate.annotations.TypeDef;
+import org.openapitools.model.ApplicationStatus;
+import org.openapitools.model.ApplicationStatusHistoryDTO;
+import org.openapitools.model.LoanOfferDTO;
+
+import javax.persistence.*;
+import java.time.LocalDate;
+import java.util.List;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Entity
+@Table(name = "application")
+@TypeDef(name = "jsonb", typeClass = JsonBinaryType.class)
+public class Application {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @ManyToOne(fetch = FetchType.LAZY, optional = false)
+    @JoinColumn(name = "client_id", nullable = false)
+    private Client client;
+
+    @OneToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "credit_id")
+    private Credit credit;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status")
+    private ApplicationStatus status;
+
+    @Column(name = "creation_date")
+    private LocalDate creationDate;
+
+    @Type(type = "jsonb")
+    @Column(name = "applied_offer", columnDefinition = "jsonb")
+    private LoanOfferDTO appliedOffer;
+
+    @Column(name = "sign_date")
+    private LocalDate signDate;
+
+    @Column(name = "sas_code")
+    private String sasCode;
+
+    @Type(type = "jsonb")
+    @Column(name = "status_history", columnDefinition = "jsonb")
+    private List<ApplicationStatusHistoryDTO> statusHistory;
+}
