# deal/src/main/java/ru/neoflex/deal/model/Client.java
@@ -1,0 +1,66 @@
+package ru.neoflex.deal.model;
+
+import com.vladmihalcea.hibernate.type.json.JsonBinaryType;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.Type;
+import org.hibernate.annotations.TypeDef;
+import org.openapitools.model.Gender;
+import org.openapitools.model.MaritalStatus;
+
+import javax.persistence.*;
+import java.time.LocalDate;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Entity
+@Table(name = "client")
+@TypeDef(name = "jsonb", typeClass = JsonBinaryType.class)
+public class Client {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @Column(name = "last_name", nullable = false)
+    private String lastName;
+
+    @Column(name = "first_name", nullable = false)
+    private String firstName;
+
+    @Column(name = "middle_name")
+    private String middleName;
+
+    @Column(name = "birth_date", nullable = false)
+    private LocalDate birthdate;
+
+    @Column(name = "email", nullable = false)
+    private String email;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "gender")
+    private Gender gender;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "marital_status")
+    private MaritalStatus maritalStatus;
+
+    @Column(name = "dependent_amount")
+    private Integer dependentAmount;
+
+    @OneToOne(fetch = FetchType.LAZY, optional = false)
+    @JoinColumn(name = "employment_id")
+    private Employment employment;
+
+    @Column(name = "account")
+    private String account;
+
+    @Type(type = "jsonb")
+    @Column(name = "passport", columnDefinition = "jsonb not null")
+    private Passport passport;
+
+}
