# deal/src/main/java/ru/neoflex/deal/model/Credit.java
@@ -1,0 +1,58 @@
+package ru.neoflex.deal.model;
+
+import com.vladmihalcea.hibernate.type.json.JsonBinaryType;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.Type;
+import org.hibernate.annotations.TypeDef;
+import org.openapitools.model.CreditStatus;
+import org.openapitools.model.PaymentScheduleElement;
+
+import javax.persistence.*;
+import java.math.BigDecimal;
+import java.util.List;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Entity
+@Table(name = "credit")
+@TypeDef(name = "jsonb", typeClass = JsonBinaryType.class)
+public class Credit {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @Column(name = "amount", nullable = false)
+    private BigDecimal amount;
+
+    @Column(name = "term", nullable = false)
+    private Integer term;
+
+    @Column(name = "monthly_payment")
+    private BigDecimal monthlyPayment;
+
+    @Column(name = "rate")
+    private BigDecimal rate;
+
+    @Column(name = "psk")
+    private BigDecimal psk;
+
+    @Column(name = "is_insurance_enabled")
+    private Boolean isInsuranceEnabled;
+
+    @Column(name = "is_salary_client")
+    private Boolean isSalaryClient;
+    @Lob
+    @Column(name = "credit_status")
+    private CreditStatus creditStatus;
+
+    @Type(type = "jsonb")
+    @Column(name = "payment_schedule", columnDefinition = "jsonb")
+    private List<PaymentScheduleElement> paymentSchedule;
+
+}
