# deal/src/main/java/ru/neoflex/deal/model/Employment.java
@@ -1,0 +1,47 @@
+package ru.neoflex.deal.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.openapitools.model.EmploymentStatus;
+import org.openapitools.model.Position;
+
+import javax.persistence.*;
+import java.math.BigDecimal;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Entity
+@Table(name = "employment")
+public class Employment {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "employment_status", nullable = false)
+    private EmploymentStatus employmentStatus;
+
+    @Column(name = "employer", nullable = false)
+    private String employer;
+
+    @Column(name = "salary", nullable = false)
+    private BigDecimal salary;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "\"position\"", nullable = false)
+    private Position position;
+
+    @Column(name = "work_experience_total", nullable = false)
+    private Integer workExperienceTotal;
+
+    @Column(name = "work_experience_current")
+    private Integer workExperienceCurrent;
+
+
+
+}
