# deal/src/main/resources/openapi/openapi.yml
@@ -1,14 +1,14 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Conveyor
+  title: Deal
 servers:
-  - url: localhost:8080
+  - url: localhost:8081
 paths:
-  /conveyor/offers:
+  /deal/application:
     post:
       tags:
-        - conveyor
+        - deal
       summary: расчет возможных условий кредита
       operationId: calculateCreditOffers
       requestBody:
@@ -27,25 +27,44 @@ paths:
                 items:
                   $ref: "#/components/schemas/LoanOfferDTO"
 
-  /conveyor/calculation:
-    post:
+  /deal/offer:
+    put:
       tags:
-        - conveyor
-      summary: валидация присланных данных + скоринг данных + полный расчет параметров кредита
-      operationId: calculateCreditParameters
+        - deal
+      summary: выбор одного из предложений
+      operationId: applyOffer
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ScoringDataDTO"
+              $ref: "#/components/schemas/LoanOfferDTO"
       responses:
         200:
           description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CreditDTO"
+
+  /deal/calculate/{applicationId}:
+    put:
+      tags:
+        - deal
+      summary: завершение регистрации + полный подсчёт кредита
+      operationId: calculateCredit
+      parameters:
+        - name: applicationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FinishRegistrationRequestDTO"
+      responses:
+        200:
+          description: OK
 
 components:
   schemas:
@@ -134,12 +153,7 @@ components:
       required:
         - amount
         - term
-        - firstName
-        - lastName
         - gender
-        - birthdate
-        - passportSeries
-        - passportNumber
         - passportIssueDate
         - passportIssueBranch
         - maritalStatus
@@ -171,11 +185,7 @@ components:
           maxLength: 30
           pattern: ^[a-zA-Z]+$
         gender:
-          type: string
-          enum:
-            - male
-            - female
-            - non_binary
+          $ref: "#/components/schemas/Gender"
         birthdate:
           type: string
           format: date
@@ -195,12 +205,7 @@ components:
         passportIssueBranch:
           type: string
         maritalStatus:
-          type: string
-          enum:
-            - married
-            - single
-            - divorced
-            - widow_widower
+          $ref: "#/components/schemas/MaritalStatus"
         dependentAmount:
           type: integer
         employment:
@@ -253,23 +258,13 @@ components:
         - workExperienceCurrent
       properties:
         employmentStatus:
-          type: string
-          enum:
-            - unemployed
-            - self_employed
-            - business_owner
-            - employed
+          $ref: "#/components/schemas/EmploymentStatus"
         employerINN:
           type: string
         salary:
           type: number
         position:
-          type: string
-          enum:
-            - middle_manager
-            - top_manager
-            - worker
-            - owner
+          $ref: "#/components/schemas/Position"
         workExperienceTotal:
           type: integer
         workExperienceCurrent:
@@ -298,3 +293,96 @@ components:
           type: number
         remainingDebt:
           type: number
+
+    ApplicationStatusHistoryDTO:
+      type: object
+      required:
+        - status
+        - time
+        - changeType
+      properties:
+        status:
+          $ref: "#/components/schemas/ApplicationStatus"
+        time:
+          type: string
+          format: date-time
+        changeType:
+          $ref: "#/components/schemas/ChangeType"
+
+    FinishRegistrationRequestDTO:
+      type: object
+      properties:
+        gender:
+          $ref: "#/components/schemas/Gender"
+        maritalStatus:
+          $ref: "#/components/schemas/MaritalStatus"
+        dependentAmount:
+          type: integer
+        passportIssueDate:
+          type: string
+          format: date
+        passportIssueBranch:
+          type: string
+        employment:
+          $ref: "#/components/schemas/EmploymentDTO"
+        account:
+          type: string
+
+
+
+
+    Gender:
+      type: string
+      enum:
+        - male
+        - female
+        - non_binary
+
+    MaritalStatus:
+      type: string
+      enum:
+        - married
+        - divorced
+        - single
+        - widow_widower
+
+    EmploymentStatus:
+      type: string
+      enum:
+        - unemployed
+        - self_employed
+        - employed
+        - business
+
+    Position:
+      type: string
+      enum:
+        - worker
+        - mid_manager
+        - top_manager
+        - owner
+
+    ApplicationStatus:
+      type: string
+      enum:
+        - preapproval
+        - approved
+        - cc_denied
+        - cc_approved
+        - prepare_documents
+        - document_created
+        - client_denied
+        - document_signed
+        - credit_issued
+
+    CreditStatus:
+      type: string
+      enum:
+        - calculated
+        - issued
+
+    ChangeType:
+      type: string
+      enum:
+        - automatic
+        - manual
